<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<!--    android:background="@mipmap/back"-->
        <!--<TextView-->
            <!--android:id="@+id/TxtviewHearpersonal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_marginStart="40dp"-->
            <!--android:layout_marginEnd="40dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--android:text="@string/Personal_info" />-->


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_per_info_header"
        app:layout_constraintBottom_toTopOf="@id/LinearLayout_ProsDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Customer_info"
        android:textColor="@color/white"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="19dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <LinearLayout
        android:id="@+id/LinearLayout_ProsDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_per_info_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TxtInputLayProsNum"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/TxtInputLayPin"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:nextFocusForward="@+id/EdTxtPinCode"
            android:nextFocusRight="@+id/EdTxtPinCode"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            android:minHeight="5dp">


            <EditText
                android:id="@+id/EdTxtProsNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/ProsNo"
                android:inputType="none"
                android:enabled="false"
                android:textColor="#FFFFFF"
                android:focusable="false"
                tools:targetApi="o" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TxtInputLayEnqDate"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            android:minHeight="5dp">


            <EditText
                android:id="@+id/EdTxtEnqDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:hint="@string/Enq_Date"
                android:inputType="date"
                android:focusable="false"
                tools:targetApi="o" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:minHeight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout_ProsDate">

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/Full_name" />-->


        <EditText
            android:id="@+id/EditTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:minHeight="5dp"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayAddress"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TxtInputLayName"
        android:layout_marginTop="10dp"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#FFFFFF"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:minHeight="5dp">

        <EditText
            android:id="@+id/EditTxtadd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/AddressLine1"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayAddress2"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TxtInputLayAddress"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#FFFFFF"
        android:minHeight="5dp">


        <EditText
            android:id="@+id/EditTxtadd2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/AddressLine2"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>


<LinearLayout
    android:id="@+id/LinearLayMobPin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/TxtInputLayAddress2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="10dp"
    android:weightSum="2"
    android:orientation="horizontal"
    android:baselineAligned="false">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayMobile"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/TxtInputLayPin"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#FFFFFF"
        android:layout_marginStart="15dp"
       android:layout_weight="1"
        android:layout_gravity="start"
        android:nextFocusForward="@+id/EdTxtPinCode"
        android:nextFocusRight="@+id/EdTxtPinCode"
        android:minHeight="5dp">


        <EditText
            android:id="@+id/EdTxtMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Mobile"
            android:inputType="number"
            android:nextFocusLeft="@+id/EdTxtPinCode"
            android:nextFocusRight="@+id/EdTxtPinCode"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:focusable="true"
            android:nextFocusUp="@+id/EdTxtPinCode"
            android:nextFocusDown="@+id/EdTxtPinCode"
            android:nextFocusForward="@+id/EdTxtPinCode"
            tools:targetApi="o" >

            <requestFocus/>

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayPin"
        android:layout_width="0dp"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#FFFFFF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:minHeight="5dp">


        <EditText
            android:id="@+id/EdTxtPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Pin"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayEmail"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LinearLayMobPin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:minHeight="5dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:id="@+id/EditTxtEmail"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxtInputLayOccup"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TxtInputLayEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:minHeight="5dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Occup"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:id="@+id/EditTxtOccup"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>